/* eslint-disable camelcase */
import React from 'react';
import { render } from 'enzyme';
import toJson from 'enzyme-to-json';
import CollectionCard from './CollectionCard';
import configureStore from 'redux-mock-store';
import { collectInfoTest } from '../../../__mocks__/selectors';
import { Tooltip } from '@patternfly/react-core';
import { mountWithRouter } from '../../../Utilities/TestingUtilities';

jest.mock('react-router-dom', () => ({
  ...jest.requireActual('react-router-dom'),
  useLocation: () => ({
    pathname: 'localhost:3000/example/path',
  }),
  useHistory: () => ({
    push: () => undefined,
  }),
}));

describe('CollectionCard', () => {
  let initialState;
  let mockStore;

  beforeEach(() => {
    mockStore = configureStore();
    initialState = {
      entityDetails: {
        entity: {
          updated: '6/01/2014',
          created: '04/01/2014',
        },
      },
      systemProfileStore: {
        systemProfile: {
          loaded: true,
          ...collectInfoTest,
        },
      },
    };
  });

  it('should render correctly - no data', () => {
    const store = mockStore({ systemProfileStore: {}, entityDetails: {} });
    const wrapper = mountWithRouter(<CollectionCard store={store} />);
    expect(toJson(wrapper)).toMatchSnapshot();
  });

  it('should render correctly with data', () => {
    const store = mockStore(initialState);
    const wrapper = render(<CollectionCard store={store} />);
    expect(toJson(wrapper)).toMatchSnapshot();
  });

  it('renders tooltip for version', () => {
    const store = mockStore(initialState);
    const wrapper = mountWithRouter(<CollectionCard store={store} />);
    const tooltip = mountWithRouter(wrapper.find(Tooltip).props().content);
    expect(tooltip).toMatchSnapshot();
  });

  [
    'hasClient',
    'hasLastCheckIn',
    'hasRegistered',
    'hasInsightsId',
    'hasReporter',
  ].map((item) =>
    it(`should not render ${item}`, () => {
      const store = mockStore(initialState);
      const wrapper = mountWithRouter(
        <CollectionCard store={store} {...{ [item]: false }} />
      );
      expect(toJson(wrapper)).toMatchSnapshot();
    })
  );

  it('should render extra', () => {
    const store = mockStore(initialState);
    const wrapper = mountWithRouter(
      <CollectionCard
        store={store}
        extra={[
          { title: 'something', value: 'test' },
          {
            title: 'with click',
            value: '1 tests',
            onClick: (_e, handleClick) => handleClick('Something', {}, 'small'),
          },
        ]}
      />
    );
    expect(toJson(wrapper)).toMatchSnapshot();
  });
});
